force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <label>Cycle Status</label>
    <nameField>
        <label>FYE Cycle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Status</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>