force-app/main/default/objects/Program__c/fields/Amount_paid_to_fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid_to_fundraiser__c</fullName>
    <label>Amount paid to fundraiser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>