force-app/main/default/objects/Program__c/fields/G_Gross_Receipts__c.field-meta.xml
<CustomField>
    <fullName>G_Gross_Receipts__c</fullName>
    <label>G. Gross Receipts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>