force-app/main/default/objects/Program__c/fields/Gross_receipts_from_activity__c.field-meta.xml
<CustomField>
    <fullName>Gross_receipts_from_activity__c</fullName>
    <label>Gross receipts from activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>