force-app/main/default/objects/Program__c/fields/IRS_Extension__c.field-meta.xml
<CustomField>
    <fullName>IRS_Extension__c</fullName>
    <label>IRS Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>