force-app/main/default/objects/Program__c/fields/Line_11_e_Professional_Fundraising_Fees__c.field-meta.xml
<CustomField>
    <fullName>Line_11_e_Professional_Fundraising_Fees__c</fullName>
    <label>Line 11(e):Professional Fundraising Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>