force-app/main/default/objects/Program__c/fields/Line_21_Payments_to_affiliates__c.field-meta.xml
<CustomField>
    <fullName>Line_21_Payments_to_affiliates__c</fullName>
    <label>Line 21: Payments to affiliates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>