force-app/main/default/objects/Program__c/fields/Line_2a_Donor_Advised__c.field-meta.xml
<CustomField>
    <fullName>Line_2a_Donor_Advised__c</fullName>
    <label>Line 2a - Donor Advised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>