force-app/main/default/objects/Program__c/fields/Lines_1_2_3_Grants_and_similar_amt__c.field-meta.xml
<CustomField>
    <fullName>Lines_1_2_3_Grants_and_similar_amt__c</fullName>
    <inlineHelpText>Lines 1, 2 &amp; 3: Grants and similar amounts paid:</inlineHelpText>
    <label>Lines 1, 2 &amp; 3: Grants and similar amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>