force-app/main/default/objects/Program__c/fields/Net_assets_or_fund_balance__c.field-meta.xml
<CustomField>
    <fullName>Net_assets_or_fund_balance__c</fullName>
    <inlineHelpText>End Of Year</inlineHelpText>
    <label>Net assets or fund balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>