force-app/main/default/objects/Program__c/fields/Total_Assets_End_Of_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets_End_Of_Year__c</fullName>
    <label>Total Assets (End Of Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>