force-app/main/default/objects/Program__c/fields/Total_Liabilities_End_Of_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities_End_Of_Year__c</fullName>
    <label>Total Liabilities (End Of Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>