force-app/main/default/objects/Program__c/fields/X10a_Gross_sales_of_inventory__c.field-meta.xml
<CustomField>
    <fullName>X10a_Gross_sales_of_inventory__c</fullName>
    <label>10a. Gross sales of inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>