force-app/main/default/objects/Program__c/fields/X10b_Less_Cost_of_goods_sold__c.field-meta.xml
<CustomField>
    <fullName>X10b_Less_Cost_of_goods_sold__c</fullName>
    <label>10b. Less: Cost of goods sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>