force-app/main/default/objects/Program__c/fields/X10c_Net_income_or_loss_from_sales__c.field-meta.xml
<CustomField>
    <fullName>X10c_Net_income_or_loss_from_sales__c</fullName>
    <inlineHelpText>10c. Net income or (loss) from sales of inventory</inlineHelpText>
    <label>10c.Net income or (loss) from sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>