force-app/main/default/objects/Program__c/fields/X11_Other_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X11_Other_Revenue__c</fullName>
    <label>11. Other Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>