force-app/main/default/objects/Program__c/fields/X11a__c.field-meta.xml
<CustomField>
    <fullName>X11a__c</fullName>
    <label>11a.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>