force-app/main/default/objects/Program__c/fields/X11b__c.field-meta.xml
<CustomField>
    <fullName>X11b__c</fullName>
    <label>11b.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>