force-app/main/default/objects/Program__c/fields/X11c__c.field-meta.xml
<CustomField>
    <fullName>X11c__c</fullName>
    <label>11c.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>