force-app/main/default/objects/Program__c/fields/X11d__c.field-meta.xml
<CustomField>
    <fullName>X11d__c</fullName>
    <label>11d.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>