force-app/main/default/objects/Program__c/fields/X11e_Total__c.field-meta.xml
<CustomField>
    <fullName>X11e_Total__c</fullName>
    <label>11e. Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>