force-app/main/default/objects/Program__c/fields/X12_1_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X12_1_Total_Revenue__c</fullName>
    <label>12.1. Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>