force-app/main/default/objects/Program__c/fields/X19_Revenue_less_expenses__c.field-meta.xml
<CustomField>
    <fullName>X19_Revenue_less_expenses__c</fullName>
    <label>19. Revenue less expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>