force-app/main/default/objects/Program__c/fields/X1a_Federated_campaigns__c.field-meta.xml
<CustomField>
    <fullName>X1a_Federated_campaigns__c</fullName>
    <label>1a. Federated campaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>