force-app/main/default/objects/Program__c/fields/X1b_Membership_Dues__c.field-meta.xml
<CustomField>
    <fullName>X1b_Membership_Dues__c</fullName>
    <label>1b. Membership Dues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>