force-app/main/default/objects/Program__c/fields/X1c_Fundraising_events__c.field-meta.xml
<CustomField>
    <fullName>X1c_Fundraising_events__c</fullName>
    <label>1c. Fundraising events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>