force-app/main/default/objects/Program__c/fields/X1d_Related_Organizations__c.field-meta.xml
<CustomField>
    <fullName>X1d_Related_Organizations__c</fullName>
    <label>1d. Related Organizations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>