force-app/main/default/objects/Program__c/fields/X1d_Total_Compensation__c.field-meta.xml
<CustomField>
    <fullName>X1d_Total_Compensation__c</fullName>
    <label>1d. Total Compensation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>