force-app/main/default/objects/Program__c/fields/X1e_Government_Grants__c.field-meta.xml
<CustomField>
    <fullName>X1e_Government_Grants__c</fullName>
    <label>1e. Government Grants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>