force-app/main/default/objects/Program__c/fields/X1f_All_Other_Contributions__c.field-meta.xml
<CustomField>
    <fullName>X1f_All_Other_Contributions__c</fullName>
    <label>1f. All Other Contributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>