force-app/main/default/objects/Program__c/fields/X1g_Non_Cash__c.field-meta.xml
<CustomField>
    <fullName>X1g_Non_Cash__c</fullName>
    <label>1g. Non-Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>