force-app/main/default/objects/Program__c/fields/X1h_Total__c.field-meta.xml
<CustomField>
    <fullName>X1h_Total__c</fullName>
    <label>1h. Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>