force-app/main/default/objects/Program__c/fields/X25_A_Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>X25_A_Total_Expenses__c</fullName>
    <label>25(A) Total Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>