force-app/main/default/objects/Program__c/fields/X25_B_Program_Service_expenses__c.field-meta.xml
<CustomField>
    <fullName>X25_B_Program_Service_expenses__c</fullName>
    <label>25(B) Program Service expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>