force-app/main/default/objects/Program__c/fields/X26_C_Management_and_general_expenses__c.field-meta.xml
<CustomField>
    <fullName>X26_C_Management_and_general_expenses__c</fullName>
    <label>26(C) Management and general expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>