force-app/main/default/objects/Program__c/fields/X26_D_Fundraising_Expenses_Total__c.field-meta.xml
<CustomField>
    <fullName>X26_D_Fundraising_Expenses_Total__c</fullName>
    <label>26(D) Fundraising Expenses (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>