force-app/main/default/objects/Program__c/fields/X2b__c.field-meta.xml
<CustomField>
    <fullName>X2b__c</fullName>
    <label>2b.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>