force-app/main/default/objects/Program__c/fields/X2c__c.field-meta.xml
<CustomField>
    <fullName>X2c__c</fullName>
    <label>2c.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>