force-app/main/default/objects/Program__c/fields/X2f_All_other_program__c.field-meta.xml
<CustomField>
    <fullName>X2f_All_other_program__c</fullName>
    <label>2f. All other program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>