force-app/main/default/objects/Program__c/fields/X2g_Total__c.field-meta.xml
<CustomField>
    <fullName>X2g_Total__c</fullName>
    <label>2g. Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>