force-app/main/default/objects/Program__c/fields/X3_Investment_Income__c.field-meta.xml
<CustomField>
    <fullName>X3_Investment_Income__c</fullName>
    <label>3. Investment Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>