force-app/main/default/objects/Program__c/fields/X4_Income_from_investment_of_tax_exempt__c.field-meta.xml
<CustomField>
    <fullName>X4_Income_from_investment_of_tax_exempt__c</fullName>
    <inlineHelpText>4. Income from investment of tax-exempt bond proceeds</inlineHelpText>
    <label>4. Income from investment of tax-exempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>