force-app/main/default/objects/Program__c/fields/X5_Royalties__c.field-meta.xml
<CustomField>
    <fullName>X5_Royalties__c</fullName>
    <label>5. Royalties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>