force-app/main/default/objects/Program__c/fields/X6a_Gross_Rents__c.field-meta.xml
<CustomField>
    <fullName>X6a_Gross_Rents__c</fullName>
    <label>6a. Gross Rents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>