force-app/main/default/objects/Program__c/fields/X6b_Less_rental_expense__c.field-meta.xml
<CustomField>
    <fullName>X6b_Less_rental_expense__c</fullName>
    <label>6b. Less: rental expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>