force-app/main/default/objects/Program__c/fields/X6c_Rental_income_or_loss__c.field-meta.xml
<CustomField>
    <fullName>X6c_Rental_income_or_loss__c</fullName>
    <label>6c. Rental income or (loss)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>