force-app/main/default/objects/Program__c/fields/X6d_Net_rental_income_or_loss__c.field-meta.xml
<CustomField>
    <fullName>X6d_Net_rental_income_or_loss__c</fullName>
    <label>6d. Net rental income or (loss)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>