force-app/main/default/objects/Program__c/fields/X7a_Gross_amount_from_sales_of_assets__c.field-meta.xml
<CustomField>
    <fullName>X7a_Gross_amount_from_sales_of_assets__c</fullName>
    <label>7a. Gross amount from sales of assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>