force-app/main/default/objects/Program__c/fields/X7b_Less_cost_or_other_basis_and_sales__c.field-meta.xml
<CustomField>
    <fullName>X7b_Less_cost_or_other_basis_and_sales__c</fullName>
    <inlineHelpText>7b. Less: cost or other basis and sales expenses</inlineHelpText>
    <label>7b. Less: cost or other basis and sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>