force-app/main/default/objects/Program__c/fields/X7c_Gain_or_loss__c.field-meta.xml
<CustomField>
    <fullName>X7c_Gain_or_loss__c</fullName>
    <label>7c. Gain or (loss)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>