force-app/main/default/objects/Program__c/fields/X7d_Net_gain_or_loss__c.field-meta.xml
<CustomField>
    <fullName>X7d_Net_gain_or_loss__c</fullName>
    <label>7d. Net gain or (loss)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>