force-app/main/default/objects/Program__c/fields/X8_Contributions_and_Grants__c.field-meta.xml
<CustomField>
    <fullName>X8_Contributions_and_Grants__c</fullName>
    <label>8. Contributions and Grants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>