force-app/main/default/objects/Program__c/fields/X8a_Gross_income_from_fundraising_events__c.field-meta.xml
<CustomField>
    <fullName>X8a_Gross_income_from_fundraising_events__c</fullName>
    <label>8a. Gross income from fundraising events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>