force-app/main/default/objects/Program__c/fields/X8b_Less_direct_expense_from_fundraisin__c.field-meta.xml
<CustomField>
    <fullName>X8b_Less_direct_expense_from_fundraisin__c</fullName>
    <inlineHelpText>8b. Less: direct expense from fundraising events</inlineHelpText>
    <label>8b. Less: direct expense from fundraisin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>