force-app/main/default/objects/Program__c/fields/X8c_Net_income_or_loss_from_fundraising__c.field-meta.xml
<CustomField>
    <fullName>X8c_Net_income_or_loss_from_fundraising__c</fullName>
    <inlineHelpText>8c. Net income or (loss) from fundraising events</inlineHelpText>
    <label>8c.Net income or (loss) from fundraising</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>