force-app/main/default/objects/Program__c/fields/X9_Other_change_in_net_assets_or_fund_ba__c.field-meta.xml
<CustomField>
    <fullName>X9_Other_change_in_net_assets_or_fund_ba__c</fullName>
    <label>9.Other change in net assets or fund bal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>