force-app/main/default/objects/Program__c/fields/X9_Program_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X9_Program_Service_Revenue__c</fullName>
    <label>9. Program Service Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>