force-app/main/default/objects/Program__c/fields/X9a_Gross_income_from_gaming_activities__c.field-meta.xml
<CustomField>
    <fullName>X9a_Gross_income_from_gaming_activities__c</fullName>
    <label>9a. Gross income from gaming activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>