force-app/main/default/objects/Program__c/fields/X9b_Less_direct_expense__c.field-meta.xml
<CustomField>
    <fullName>X9b_Less_direct_expense__c</fullName>
    <label>9b. Less: direct expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>