force-app/main/default/objects/Program__c/fields/X9c_Net_income_or_loss_from_gaming__c.field-meta.xml
<CustomField>
    <fullName>X9c_Net_income_or_loss_from_gaming__c</fullName>
    <inlineHelpText>9c. Net income or (loss) from gaming activities</inlineHelpText>
    <label>9c.Net income or (loss) from gaming</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>