force-app/main/default/objects/Program__c/listViews/Cycle_Status.listView-meta.xml
<ListView>
    <fullName>Cycle_Status</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Cycle Status Records</label>
</ListView>