force-app/main/default/objects/Program__c/listViews/Cycle_Status_Client.listView-meta.xml
<ListView>
    <fullName>Cycle_Status_Client</fullName>
    <columns>Client__c</columns>
    <columns>Client_Code__c</columns>
    <columns>NAME</columns>
    <columns>Status_Record__c</columns>
    <columns>Next_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Cycle Status</label>
</ListView>