force-app/main/default/objects/Program__c/listViews/Pending_Cycle_Status.listView-meta.xml
<ListView>
    <fullName>Pending_Cycle_Status</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Status_Record__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>Pending Cycle Status</label>
</ListView>