force-app/main/default/objects/Program__c/listViews/X2022_Cycles_for_VN_Pharma.listView-meta.xml
<ListView>
    <fullName>X2022_Cycles_for_VN_Pharma</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client__c</field>
        <operation>equals</operation>
        <value>VN Pharma</value>
    </filters>
    <label>2022 Cycles for VN Pharma</label>
</ListView>